--- a/src/BoligInfo.Infrastructure/BoligInfo.Database/BoligInfo.Database.csproj
+++ b/src/BoligInfo.Infrastructure/BoligInfo.Database/BoligInfo.Database.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BoligInfo.Core\BoligInfo.Core.csproj" />
+  </ItemGroup>
+
 </Project>
