Added dependencies to BoligInfo.Api

--- a/src/BoligInfo.Api/BoligInfo.Api.csproj
+++ b/src/BoligInfo.Api/BoligInfo.Api.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BoligInfo.Infrastructure\BoligInfo.Database\BoligInfo.Database.csproj" />
   </ItemGroup>
 
 </Project>
