--- a/src/BoligInfo.Infrastructure/BoligInfo.Database/BoligInfo.Database.csproj
+++ b/src/BoligInfo.Infrastructure/BoligInfo.Database/BoligInfo.Database.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.3.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
   </ItemGroup>
 
