--- a/src/BoligInfo.Api/BoligInfo.Api.csproj
+++ b/src/BoligInfo.Api/BoligInfo.Api.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\BoligInfo.Infrastructure\BoligInfo.Database\BoligInfo.Database.csproj" />
     <ProjectReference Include="..\BoligInfo.Infrastructure\BoligInfo.Repositories\BoligInfo.EquityRepository\BoligInfo.EquityRepository.csproj" />
     <ProjectReference Include="..\BoligInfo.Infrastructure\BoligInfo.Repositories\BoligInfo.LoanRepository\BoligInfo.LoanRepository.csproj" />
+    <ProjectReference Include="..\BoligInfo.Infrastructure\BoligInfo.Services\BoligInfo.Services.csproj" />
   </ItemGroup>
 
 </Project>
