--- a/src/BoligInfo.Api/BoligInfo.Api.csproj
+++ b/src/BoligInfo.Api/BoligInfo.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>d7c1fe20-0107-43a2-a99c-758222415efd</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
